lab1/Test/L1-A-10-15.output
Error Type B at Line 12
Error Type B at Line 15
Error Type A at Line 33
Error Type A at Line 74
