lab1/Test/L1-A-10-15.cmm
struct {
  struct Gl {
    int bhz0g7jKGrCoHC ;
  }xQpnij ;
  struct poCl2I8Spnmtxy Vj9I8ia4kgS ;
  int qdOAB5HR ;
  float OM6mpAUupA1kvv62j96_ , R5K0sv9maodhX2 [ 1862485377 
    ] = nbwC || ag0C9Yn == sFsdI1g - EsF_F7KF / - ! lX5yBdr 
    ( PruuVWXXRDS = qn12Y6j && tReiLgBp07ZJVyN7dw < c 
    + eQq7 [ B >= sJuR2 * ( A4IWCAxWKEU2 != I ( KW6Wzs2wbPdvLhU 
    , AMKbBdBxwlrFrfAiwV <= - ( j51ZtieEzs00r679m || sh2thHhnviNgRGac 
    ) . qI8dlJ / ! 1234902216 || ) * _1cxiPKhJoLL1sbxE 
    + - 1294550995.1214047088 > N1Cx ( ) ) ] . l3POmI_TT 
    ) ;
}return z7m5nvG6U ( ) {
}
int OUp7_QTCq_e2CvncPqb ( ) {
{
    if ( UE7A8 )     xln_VeT ;
else     while ( DfNel )     while ( gMJ )     Z ;



    while ( XhcIr53piUD5 )     while ( Ed03STr4XmL 
      )     while ( otYa0Vt9sQEL52ix )     WFOaq ;



  }}
int ;
int ;
int Zr6qRmZ ( ) {
  xdIfAa7CgFTVnKJvsz ;$
}
int ZZaGnTq6 ( int FvQlcqmZQg044PbhhHs ) {
  N1WpPE ;
{
    while ( QgBfYuELxuGL )     if ( JhO0aeroLuSf9ROVMY 
      )     L ;
else     r0j ;


    MzHh ;
  }  while ( DBqExmbx76 )   YsGaXMbJ_yxGoiO ;

  oc43Ap_xLgj4ETk ;
  God4fk ;
  while ( DZxAlQxCtRMz )   QIrnB_ ;

  if ( EE66jMWK35whVwxzR )   NTLf2N ;
else {
    _jH7BdrUUpR7rUQKD8 ;
    hFVVLU4Kcyzs ;
  }
  if ( jKhRn3BCTCqNT7LCBp )   return Rc78es4jlM7VPWkvJ 
    ;

  while ( Z_GAdX_yEcssn8u )   YIst6RFXi6BpNV_V ;

}
int ;
int dBcsGnEAn44AjX8Xa3 , zor2LOq7_mXd4WpqCG 

;
int ;
int ;
int sAc ( int G6elF0 , int vHzGzKnGBqTVZUyh_wWN ) 
  {
  if ( HufhpJmb1 )   HN8j_bdrgp4Vwjgavfd ;
else   if ( D )   JTXOrryg ;


}
@